<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Preparazione al Quiz"
            android:layout_margin="@dimen/activity_margin"
            android:textSize="@dimen/activity_main_text"
            android:textColor="@color/colorAccent"
            android:id="@+id/quiz_title"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_message"
            android:layout_below="@id/quiz_title"
            android:id="@+id/quiz_message"
            android:layout_margin="@dimen/activity_margin"
            android:textSize="@dimen/activity_subtitle_text"
            android:textColor="@color/colorTextSecondary"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/quiz_seekbar"
            android:min="0"
            android:layout_below="@id/quiz_message"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/activity_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/quiz_seekbar"
            android:layout_margin="@dimen/activity_margin"
            android:textSize="@dimen/activity_subtitle_text"
            android:textColor="@color/colorPrimary"
            android:id="@+id/quiz_quantity"
            tools:text="20"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_confirmation"
            android:layout_alignParentRight="true"
            android:layout_below="@id/quiz_quantity"
            android:layout_margin="@dimen/activity_margin"
            android:backgroundTint="@color/colorAccent"
            android:id="@+id/quiz_confirmation"
            android:textColor="@color/colorWhite"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_annullation"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorWhite"
            android:layout_margin="@dimen/activity_margin"
            android:layout_toLeftOf="@id/quiz_confirmation"
            android:id="@+id/quiz_annulation"
            android:layout_below="@id/quiz_quantity"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>